infrastructure/talos/nginx-ingress-controller/ingress-customization.yaml
# ingress-customization.yaml
---
# Service mit LoadBalancer-Typ für den Ingress Controller
# (ersetzt den Standard-Service aus dem offiziellen Manifest)
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    # Optionale Anpassungen der Service-Konfiguration
    # metallb.universe.tf/loadBalancerIPs: "10.x.x.50"  # Spezifische IP anfordern (falls gewünscht)
spec:
  type: LoadBalancer # Nutzt MetalLB für externe IP
  # Optionale Konfiguration für eine feste IP-Adresse
  # loadBalancerIP: 10.x.x.50
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
